Fixed size of drop down button on small drop downs

--- a/app/assets/stylesheets/_application.scss
+++ b/app/assets/stylesheets/_application.scss
@@ -3213,7 +3213,7 @@ html[data-lingua-franca-example="html"] {
 			@include _(appearance, none);
 		}
 
-		&.small {
+		&.small label {
 			@include after {
 				font-size: 1em;
 			}
